--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Exploring Drag and Drop with Lightning Web Components</title>
+		<title>Exploring LWC Drag and Drop</title>
 
 		<meta name="description" content="VirtualDreamin 2020 LWC presentation">
 		<meta name="author" content="Don Robins">
@@ -72,12 +72,16 @@
 					<h8>Pluralsight "Salesforce Play by Play" Producer</h8><br/>
 				</section>
 
-
-
-
 				
 				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
-					<h3>Straw Poll</h3>
+					<h3>Topics</h3>
+					<p/>
+					<h8>What is Drag and Drop</h8><br/>
+					<h8>Drag and Drop Use Cases</h8><br/>
+					<h8>Drag and Drop Terminology</h8><br/>
+					<h8>Drag and Drop Attributes and Events</h8><br/>
+					<h8>Standard HTML vs LWC</h8><br/>					
+					<h8>Demo and Dissection</h8><br/>					
 				</section>
 
 				<!-- Merge the QR with the fade in URL-->
