Adjustments for JS

--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@
 					<h3>Topics</h3>
 					<p/>
 					<h8 class="fragment fade-in-then-semi-out">Drag and Drop Use Cases</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">What is Drag and Drop (DnD)</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">What is Drag and Drop</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">Terminology, Attributes and Events</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">Standard HTML</h8><br/>					
-					<h8 class="fragment fade-in-then-semi-out">Tightly Coupled LWCs</h8><br/>										
-					<h8 class="fragment fade-in-then-semi-out">Loosely Coupled LWCs</h8><br/>										
+					<h8 class="fragment fade-in-then-semi-out">In Standard HTML</h8><br/>					
+					<h8 class="fragment fade-in-then-semi-out">In Standard HTML with Visualforce</h8><br/>					
+					<h8 class="fragment fade-in-then-semi-out">In Tightly Coupled LWCs</h8><br/>										
+					<h8 class="fragment fade-in-then-semi-out">In Loosely Coupled LWCs</h8><br/>										
 					<h8 class="fragment fade-in-then-semi-out">Summary and Take-Aways</h8><br/>										
 				</section>
 
@@ -386,7 +387,17 @@
 				</section>
 
 				<section data-transition="fade-in fade-out" >
-					<h3>Demo 1 - Visualforce</h3> 
+					<h4>Drop Event Handler</h4> 
+					<img height="75%" width="75%" src="img/htmlDropJS.png" />	
+				</section>
+				
+				<section data-transition="fade-in fade-out" >
+					<h4>Drop Event Handler</h4> 
+					<img height="75%" width="75%" src="img/htmlDropJSCallout.png" />	
+				</section>
+
+				<section data-transition="fade-in fade-out" >
+					<h3>Dissection 1 - Visualforce</h3> 
 				</section>
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
