--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
 					<p/>
 					<h8 class="fragment fade-in-then-semi-out">Drag and Drop Use Cases</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">What is Drag and Drop</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">Terminology, Attributes and Events</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">In Standard HTML</h8><br/>					
+					<h8 class="fragment fade-in-then-semi-out">Drag and Drop Concepts</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">In Standard HTML with Visualforce</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">In Tightly Coupled LWCs</h8><br/>										
 					<h8 class="fragment fade-in-then-semi-out">In Loosely Coupled LWCs</h8><br/>										
@@ -171,12 +170,12 @@
 					<h8 class="fragment fade-in-then-semi-out">User "Clicks" on a displayed element</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">User "Drags" it across the screen</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">User "Drops" it somewhere else on the screen</h8><br/>										
-					<h8 class="fragment fade-in-then-semi-out">The item appears at the new location</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">The element appears at the new location</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">Some associated logic may execute affecting data</h8><br/>															
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
-					<h3>It's Magic!</h3>
+					<h3>It's Visual Magic!</h3>
 				</section>
 
 				<section> 
@@ -242,7 +241,7 @@
 							<td width="50%">
 								<div class="fragment fade-in-then-semi-out">
 									<h4><u>Drop Target</u></h4>
-								 	<h8><p><i>a target container<br/>
+								 	<h8><p><i>a container element<br/>
 										the selected element can<br/>
 										be dragged over and<br/>
 										dropped into<br/>
@@ -282,7 +281,7 @@
 					<h4 class="fragment fade-in"><i>There are often multiple Target Containers</i></h4>
 				</section>		
 
-				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
 					<h4><i>(Draggable Element)</i></h4>
 					<h3>The Drag Start event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Captures the element ID of the Dragged element</h8><br/>
@@ -291,37 +290,37 @@
 					<h8 class="fragment fade-in-then-semi-out">Changes the element's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
 					<h4><i>(Draggable Element)</i></h4>
 					<h3>The Drag event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Affects the dragged element's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
 					<h4><i>(Draggable Element)</i></h4>
 					<h3>The Drag Stop event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Resets the dragged element's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drag Enter event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Changes the target container's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drag Over event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Changes the target container's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drag Leave event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Resets the target container's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drop event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Processes DOM changes to the Dragged element</h8><br/>									
@@ -329,7 +328,7 @@
 					<h8 class="fragment fade-in-then-semi-out">Resets the target container's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
 					<h3>Reminder:<br/>
 						These are Standard<br/>
 						HTML5 Events</h3>
@@ -343,19 +342,19 @@
 						in Salesforce?</h3>
 				</section>			
 
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Standard HTML in Visualforce</h4> 
 					<img src="img/CasePicker1.png" />	
 				</section>
 
 				<!-- Callout transition-->
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Element<br/>
 						(in the 'New' source container)		
 					</h4> 
 					<img src="img/html1.png" />
 				</section>
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Element<br/>
 						(in the 'New' source container)		
 					</h4> 
@@ -363,40 +362,50 @@
 				</section>
 
 				<!-- Callout transition-->				
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
 						(the 'Working' container)</h4> 
 					<img src="img/html2.png" />	
 				</section>
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
 						(the 'Working' container)</h4> 
 					<img src="img/html2callout.png" />	
 				</section>
 
 				<!-- Callout transition-->				
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
 						(the 'Escalted' container)</h4> 
 					<img src="img/html3.png" />	
 				</section>
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
 						(the 'Escalted' container)</h4> 
 					<img src="img/html3callout.png" />	
 				</section>
 
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Setting Up The Event Listeners</h4> 
+					<img height="75%" width="75%" src="img/htmlHandlerJS.png" />	
+				</section>
+
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Setting Up The Event Listeners</h4> 
+					<img height="75%" width="75%" src="img/htmlHandlerJSCallout.png" />	
+				</section>
+
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Drop Event Handler</h4> 
 					<img height="75%" width="75%" src="img/htmlDropJS.png" />	
 				</section>
-				
-				<section data-transition="fade-in fade-out" >
+
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Drop Event Handler</h4> 
 					<img height="75%" width="75%" src="img/htmlDropJSCallout.png" />	
 				</section>
 
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h3>Dissection 1 - Visualforce</h3> 
 				</section>
 
