--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					</p>	
 				</section>
 
-				<section data-transition="fade-in fade-out"
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					data-background-iframe="https://en.wikipedia.org/wiki/Drag_and_drop" 
 					data-background-interactive >
 				</section>
@@ -281,7 +281,7 @@
 					<h4 class="fragment fade-in"><i>There are often multiple Target Containers</i></h4>
 				</section>		
 
-				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Draggable Element)</i></h4>
 					<h3>The Drag Start event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Captures the element ID of the Dragged element</h8><br/>
@@ -290,37 +290,37 @@
 					<h8 class="fragment fade-in-then-semi-out">Changes the element's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Draggable Element)</i></h4>
 					<h3>The Drag event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Affects the dragged element's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Draggable Element)</i></h4>
 					<h3>The Drag Stop event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Resets the dragged element's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drag Enter event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Changes the target container's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drag Over event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Changes the target container's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drag Leave event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Resets the target container's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drop event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Processes DOM changes to the Dragged element</h8><br/>									
@@ -328,7 +328,7 @@
 					<h8 class="fragment fade-in-then-semi-out">Resets the target container's CSS presentation</h8><br/>									
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h3>Reminder:<br/>
 						These are Standard<br/>
 						HTML5 Events</h3>
