--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 							</td>
 							<td width="50%">
 								<div class="fragment fade-in-then-semi-out">
-									<h4><u>Drop Target</u></h4>
+									<h4><u>Target Container</u></h4>
 								 	<h8><p><i>a container element<br/>
 										the selected element can<br/>
 										be dragged over and<br/>
