--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
 					<h8 class="fragment fade-in-then-semi-out">Drag and Drop Use Cases</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">What is Drag and Drop</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">Drag and Drop Concepts</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">In Standard HTML with Visualforce</h8><br/>					
-					<h8 class="fragment fade-in-then-semi-out">In Tightly Coupled LWCs</h8><br/>										
-					<h8 class="fragment fade-in-then-semi-out">In Loosely Coupled LWCs</h8><br/>										
-					<h8 class="fragment fade-in-then-semi-out">Summary and Take-Aways</h8><br/>										
+					<h8 class="fragment fade-in-then-semi-out">Standard HTML with Visualforce</h8><br/>					
+					<h8 class="fragment fade-in-then-semi-out">Tightly vs Loosely Coupled LWCs</h8><br/>										
+					<h8 class="fragment fade-in-then-semi-out">Where to Learn More</h8><br/>										
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
@@ -496,8 +495,6 @@
 					<img src="img/case-picker-JS-header.png" width="60%" />
 				</section>
 
-
-
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Two Architectural Approaches</h4>
 					<table width="100%">
@@ -541,6 +538,14 @@
 					<h3>Where Can I Learn More?</h3>
 				</section>
 
+				<section data-transition="fade-in fade-out">
+					<a href="https://github.com/forcementor/lwc-dnd-demos" target="_none"> 						
+						<img src="img/GitRepo.png" width="80%"/>
+					</a>
+					<br/>							
+					<h4>https://github.com/forcementor/lwc-dnd-demos</h4>
+				</section>
+
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://pluralsight.pxf.io/C0114" target="_none"> 						
 						<img src="img/CraigCourse.png" style="border:none;" />
@@ -578,28 +583,28 @@
 						<img src="img/PbPSite.png" width="80%"/>
 					</a>
 					<br/>							
-					<h4>www.sfplaybyplaycom</h4>
+					<h4>www.sfplaybyplay.com</h4>
 				</section>
 				<section data-transition="fade-in fade-out">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPSiteCallout.png" width="80%"/>
 					</a>
 					<br/>							
-					<h4>www.sfplaybyplaycom</h4>
+					<h4>www.sfplaybyplay.com</h4>
 				</section>
 				<section data-transition="fade-in fade-out">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPTiles.png" width="60%"/>
 					</a>
 					<br/>							
-					<h4>www.sfplaybyplaycom</h4>
+					<h4>www.sfplaybyplay.com</h4>
 				</section>
 				<section data-transition="fade-in fade-out">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPTilesCallout.png" width="60%"/>
 					</a>
 					<br/>							
-					<h4>www.sfplaybyplaycom</h4>
+					<h4>www.sfplaybyplay.com</h4>
 				</section>
 
 
