--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
 					</p>	
 				</section>
 
-				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png"
-					data-background-iframe="https://en.wikipedia.org/wiki/Drag_and_drop" 
-					data-background-interactive >
+				<section data-transition="fade-in fade-out" 
+						 data-background-iframe="https://en.wikipedia.org/wiki/Drag_and_drop" 
+						 data-background-interactive >
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
