--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://pluralsight.pxf.io/C0114" target="_none"> 						
-						<img src="img/CraigCourse.png" style="border:none;" />
+						<img src="img/craigCourse.png" style="border:none;" />
 					</a>							
 					<br/>
 					<h4>HTML Fundamentals</h4>
