Final QR tweaks

--- a/index.html
+++ b/index.html
@@ -411,9 +411,8 @@
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
-					<h3>Dissection 1 - Visualforce</h3> 
+					<h3>Demo Visualforce...</h3> 
 				</section>
-
 
 				<section data-transition="slide-in fade-out" >
 					<h3>How do you implement<br/>
@@ -423,14 +422,14 @@
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
-					<h4>LWC Drag and Drop Differences</h4>
-					<h8 class="fragment fade-in-then-semi-out">Requires a Hybrid Approach</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">Uses a Custom Event Messaging Payload</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out"><i>(Abandons event DTO and Drop Effects)</i></h8><br/>					
-					<h8 class="fragment fade-in-then-semi-out">Encapsulates Component Styling</h8><br/>
+					<h4>LWC vs Standard HTML Differences</h4>
+					<h8 class="fragment fade-in-then-semi-out">Both Manipulate the DOM but...</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">LWC encapsulation requires a Hybrid Approach</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">Custom Event Messaging Payload</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">Abandons Event DTO and Drop Effects</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Facilitates Data Manipulation</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">Uses Data Driven Reactive Rendering</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out"><i>(Avoids standard DOM Manipulation!)</i></h8><br/>
+					<h8 class="fragment fade-in-then-semi-out"><i>(LWC avoids standard DOM Manipulation!)</i></h8><br/>
 				</section>
 
 				<section data-transition="slide-in fade-out" >
@@ -532,7 +531,18 @@
 				</section>
 
 				<section data-transition="slide-in fade-out" >
-					<h3>Let's Dissect!</h3> 
+					<h3>Demo LWC...</h3> 
+				</section>
+
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Key Points</h4>
+					<h8 class="fragment fade-in-then-semi-out">Understand standard drag and drop events</h8><br/>					
+					<h8 class="fragment fade-in-then-semi-out">Don’t fight the framework</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">Leverage custom events</h8><br/>										
+					<h8 class="fragment fade-in-then-semi-out">Leverage data capabilities</h8><br/>										
+					<h8 class="fragment fade-in-then-semi-out">Leverage reactive rendering</h8><br/>					
+					<h8 class="fragment fade-in-then-semi-out">Use Event Handlers to change style</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">Use a Master Component for Data Processing</h8><br/>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
@@ -608,41 +618,22 @@
 					<h4>www.sfplaybyplay.com</h4>
 				</section>
 
-
-				
-
-
-			
-				<section style="text-align: left;" data-background-image="img/ForcelandiaHalfPage.png" data-transition="slow">
-					<div align="center" style="font-size: 86px;" >Q and A</div>
-				</section>	
-
-
-
-
-
-
-
-
-
-
-
 				<section style="text-align: left;" data-background-image="img/ForcelandiaBackground.jpg" data-transition="slow">
-					<h4 style="color:Black">Next Steps:</h4>
-					<ul style="color:Black">
+					<h4 style="color:White">Next Steps:</h4>
+					<ul style="color:White">
 						<li>Visit our sponsors!</li>
 						<li>Follow me @donrobins and on Pluralsight.com</li>
 						<li>Keep on learning and share with your Ohana</li>
 					</ul>
 					<br/>
-					<p style="color:Black">
+					<p style="color:White">
 						This presentation is on Github here:
-						<img src="img/forcelandia19qr.png"  style="border:none;" height="25%" width="25%" align="right" />
+						<img src="img/lwc_dnd_20qr.png"  style="border:none;" height="25%" width="25%" align="right" />
 					</p>
-					<h4 style="color:Black">Thanks!</h4>
+					<h4 style="color:White">Thanks!</h4>
 					<div style="font-size: 25px;">
-						<a href="https://forcementor.github.io/forcelandia19emd">
-							<i>https://forcementor.github.io/forcelandia19emd</i>
+						<a href="https://forcementor.github.io/lwc_dnd_20">
+							<i>https://forcementor.github.io/lwc_dnd_20</i>
 						</a>	
 					</div>
 				</section>
